# Twister

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  UPDATE.md
include/: book.h  define.h  hash_table.h  moves_getter.h  moves_sort.h  preset.h  representation.h  search.h  ucci.h  value.h
resources/: book.txt
src/: book.cpp  hash_table.cpp  main.cpp  moves_getter.cpp  moves_sort.cpp  new_value.cpp  preset.cpp  representation.cpp  search.cpp  twister.cpp  ucci.cpp  value.cpp
